--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
               </div>
               <div class="text-center">
                 <h4 class="text-md py-2">Diplomados</h4>
+                <span class="text-gray"
+                  >Ya puedes aprender de la Logoterapia de forma virtual. Estés
+                  donde estés y a la hora que tú prefieras. No hay fechas fijas
+                  de inicio! Puedes empezar en cuanto te inscribes.</span
+                >
               </div>
             </div>
             <div class="grid-item">
@@ -125,6 +130,12 @@
               </div>
               <div class="text-center">
                 <h4 class="text-md py-2">Talleres</h4>
+                <span class="text-gray"
+                  >La Logoterapia de Viktor Frankl ofrece una filosofía de vida
+                  que es útil a toda persona, independientemente de su edad,
+                  profesión, cultura, etc. Este taller en línea abordará temas
+                  de gran actualidad para vencer retos.</span
+                >
               </div>
             </div>
             <div class="grid-item">
@@ -133,6 +144,11 @@
               </div>
               <div class="text-center">
                 <h4 class="text-md py-2">Videos</h4>
+                <span class="text-gray"
+                  >Logoforo ofrece videos gratuitos de Logoterapia y desarrollo
+                  personal para poner a tu alcance herramientas de crecimiento
+                  para todos.</span
+                >
               </div>
             </div>
           </div>
