--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </h1>
           </div>
 
-          <div class="grid cols-1 lg-cols-3">
+          <div class="grid cols-1 lg-cols-3 py-10">
             <div class="grid-item">
               <div class="text-center text-2xl text-red">
                 <i class="uil uil-graduation-cap"></i>
