--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
 
           <div class="grid cols-1 lg-cols-3 py-10">
-            <div class="grid-item">
+            <div class="grid-item px-5">
               <div class="text-center text-2xl text-red">
                 <i class="uil uil-graduation-cap"></i>
               </div>
@@ -124,7 +124,7 @@
                 >
               </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item px-5">
               <div class="text-center text-2xl text-red">
                 <i class="uil uil-book"></i>
               </div>
@@ -138,7 +138,7 @@
                 >
               </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item px-5">
               <div class="text-center text-2xl text-red">
                 <i class="uil uil-youtube"></i>
               </div>
