services padding ready

--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
             </div>
             <div class="grid-item px-5">
               <div class="text-center text-2xl text-red">
-                <i class="uil uil-youtube"></i>
+                <i class="uil uil-user-arrows"></i>
               </div>
               <div class="text-center">
-                <h4 class="text-md py-2">Videos</h4>
+                <h4 class="text-md py-2">Compromiso Social</h4>
                 <span class="text-gray"
-                  >Logoforo ofrece videos gratuitos de Logoterapia y desarrollo
-                  personal para poner a tu alcance herramientas de crecimiento
-                  para todos.</span
+                  >Si eres una persona que trabaja con grupos vulnerables, como
+                  parte de una: Fundación ONG Asociación Civil Como misioner@ o
+                  en un voluntariado.</span
                 >
               </div>
             </div>
@@ -155,6 +155,23 @@
         </div>
       </section>
       <!-- @@@@@@@@@@@@  /Agency Area @@@@@@@@@@@@@ -->
+
+      <!-- @@@@@@@@@@@@  Life Area @@@@@@@@@@@@@ -->
+      <section class="container mx-auto life-area">
+        <div class="grid cols-1 lg-cols-2 text-center md-text-left">
+          <div class="grid-images">
+            <div class="item-one"></div>
+            <div class="item-two"></div>
+            <div class="item-three"></div>
+          </div>
+          <div class="py-10">
+            <span class="d-inline btn btn-primary bg-gradient-peach text-red"
+              >Logoterapia</span
+            >
+          </div>
+        </div>
+      </section>
+      <!-- @@@@@@@@@@@@  /Life Area @@@@@@@@@@@@@ -->
     </main>
     <!-- @@@@@@@@@@@@  /Main Section @@@@@@@@@@@@@ -->
 
