--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <!-- @@@@@@@@@@@@  /Agency Area @@@@@@@@@@@@@ -->
 
       <!-- @@@@@@@@@@@@  Life Area @@@@@@@@@@@@@ -->
-      <section class="container mx-auto life-area">
+      <section class="container mx-auto social-area">
         <div class="grid cols-1 lg-cols-2 text-center md-text-left">
           <div class="grid-images">
             <div class="item-one"></div>
@@ -166,8 +166,31 @@
           </div>
           <div class="py-10">
             <span class="d-inline btn btn-primary bg-gradient-peach text-red"
-              >Logoterapia</span
+              >Compromiso Social</span
             >
+            <div class="font-family">
+              <h1 class="text-lg text-dark py-5">
+                La Logoactitud es una Filosofía de vida caracterizada por un
+                protagonismo esperanzado.
+              </h1>
+              <p class="py-5 text-gray">
+                LaFilosofía de la esperanza, del esfuerzo, del compromiso
+                consigo mismo y con los demás. Cada uno de nosotros puede ver en
+                su caso personal qué espera de nosotros la sociedad y dentro de
+                nuestras posibilidades, llevarlo a la práctica dotando así,
+                también de sentido nuestra existencia.
+              </p>
+              <p class="py-5 text-gray">
+                La Filosofía es una actividad que pertenece a la esencia del
+                hombre, y en tanto somos humanos filosofamos, reflexionamos,
+                pensamos, valoramos, descubrimos el valor de las cosas,
+                apreciamos, estimamos, amamos. Pero aunque el filosofar es
+                propio de la esencia humana, sin embargo no siempre está
+                “activado” y “despierto”. El sentido de acudir a la Filosofía
+                desde la Logoterapia es poner en actividad la propia esencia,
+                despertar al pensar.
+              </p>
+            </div>
           </div>
         </div>
       </section>
