--- a/index.html
+++ b/index.html
@@ -195,6 +195,51 @@
         </div>
       </section>
       <!-- @@@@@@@@@@@@  /Life Area @@@@@@@@@@@@@ -->
+
+      <!-- @@@@@@@@@@@@  Skills Area @@@@@@@@@@@@@ -->
+      <section class="container mx-auto skills-area">
+        <div class="grid cols-1 lg-cols-2">
+          <div class="grid-one text-center md-text-left">
+            <span class="d-inline btn btn-primary bg-gradient-peach text-red"
+              >Certificaciones</span
+            >
+            <div class="font-family">
+              <h1 class="text-lg text-dark py-5">
+                Formación profesional y actividad laboral.
+              </h1>
+              <p class="text-gray mx-auto md-mx-initial">
+                Algunas áreas de experiencia en donde puedo ayudarte:<br />
+                Ansiedad • Estrés • Control de Peso • Conflictos Familiares • De
+                Pareja • Individuales • Laborales
+              </p>
+            </div>
+          </div>
+
+          <div class="grid-two">
+            <div class="skills-box">
+              <div class="grid lg-cols-2 btn-shadow font-family">
+                <div class="item1 text-center">
+                  <h1 class="text-dark text-md">Licenciatura en Psicología</h1>
+                  <span class="text-gray">Universidad Iberoamericana</span>
+                </div>
+                <div class="item2 text-center">
+                  <h1 class="text-dark text-md">Maestria en Terapia Familiar Sistémica</h1>
+                  <span class="text-gray">Universidad Iberoamericana</span>
+                </div>
+                <div class="item3 text-center">
+                  <h1 class="text-dark text-md">Certificación en Hipnoterapia</h1>
+                  <span class="text-gray">Universidad Iberoamericana</span>
+                </div>
+                <div class="item4 text-center">
+                  <h1 class="text-dark text-md">Certificación en Programación Neurolingüistica</h1>
+                  <span class="text-gray">(PNL)</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- @@@@@@@@@@@@  Skills Area @@@@@@@@@@@@@ -->
     </main>
     <!-- @@@@@@@@@@@@  /Main Section @@@@@@@@@@@@@ -->
 
