--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
               <span class="d-block">Dra. Rosa López</span>
               <span class="d-block">Logoterapeuta</span>
             </div>
-            <div class="py-5">
+            <div id="greeting" class="py-5">
               <p class="text-gray">
                 Soy Psicóloga Clínica, egresada de la Universidad Iberoamericana
               </p>
@@ -547,6 +547,17 @@
         </div>
       </section>
       <!-- @@@@@@@@@@@@  Skills Area @@@@@@@@@@@@@ -->
+
+      <!-- @@@@@@@@@@@@  Articles Area @@@@@@@@@@@@@ -->
+
+      <section class="article-area container mx-auto py-10">
+        <div class="area-title text-center font-family">
+          <span class="text-red">Artículos Recientes</span>
+          <h1 class="text-lg text-dark">Artículos</h1>
+        </div>
+      </section>
+
+      <!-- @@@@@@@@@@@@  /Articles Area @@@@@@@@@@@@@ -->
     </main>
     <!-- @@@@@@@@@@@@  /Main Section @@@@@@@@@@@@@ -->
 
