--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 protagonismo esperanzado.
               </h1>
               <p class="py-5 text-gray">
-                LaFilosofía de la esperanza, del esfuerzo, del compromiso
+                La Filosofía de la esperanza, del esfuerzo, del compromiso
                 consigo mismo y con los demás. Cada uno de nosotros puede ver en
                 su caso personal qué espera de nosotros la sociedad y dentro de
                 nuestras posibilidades, llevarlo a la práctica dotando así,
@@ -508,6 +508,12 @@
               <h1 class="text-lg text-dark py-5">
                 Formación profesional y actividad laboral.
               </h1>
+              <p class="text-gray mx-auto md-mx-initial py-5">
+                Sé que a veces uno solo no puede con todo; me gustaría poder
+                ayudarte a encontrar orden en el caos que a veces tenemos en la
+                cabeza. Actualmente dando psicoterapia de manera presencial y en
+                línea.<br />
+              </p>
               <p class="text-gray mx-auto md-mx-initial">
                 Algunas áreas de experiencia en donde puedo ayudarte:<br />
                 Ansiedad • Estrés • Control de Peso • Conflictos Familiares • De
@@ -554,6 +560,54 @@
         <div class="area-title text-center font-family">
           <span class="text-red">Artículos Recientes</span>
           <h1 class="text-lg text-dark">Artículos</h1>
+        </div>
+
+        <div class="grid cols-1 lg-cols-3 font-family py-10">
+          <div class="card">
+            <article class="btn-shadow">
+              <img src="./assets/articles/article3.jpeg" class="w-100" alt="" />
+              <div class="py-5 px-5">
+                <span class="text-gray">Logoterapia en tiempos difíciles.</span>
+                <a href="#">
+                  <h2 class="text-dark">
+                    La Logoterapia ofrece una filosofía de vida que es útil a
+                    toda persona.
+                  </h2>
+                </a>
+              </div>
+            </article>
+          </div>
+          <div class="card">
+            <article class="btn-shadow">
+              <img src="./assets/articles/article1.jpeg" class="w-100" alt="" />
+              <div class="py-5 px-5">
+                <span class="text-gray">Logoterapia en tiempos difíciles.</span>
+                <a href="#">
+                  <h2 class="text-dark">
+                    La Logoterapia ofrece una filosofía de vida que es útil a
+                    toda persona.
+                  </h2>
+                </a>
+              </div>
+            </article>
+          </div>
+          <div class="card">
+            <article class="btn-shadow">
+              <img src="./assets/articles/article4.jpeg" class="w-100" alt="" />
+              <div class="py-5 px-5">
+                <span class="text-gray"
+                  >Seminario Vínculos, Crecimiento interior y Sentido de
+                  vida.</span
+                >
+                <a href="#">
+                  <h2 class="text-dark">
+                    Vive con una sensación de mayor sentido, fortalecer tu
+                    autoconfianza.
+                  </h2>
+                </a>
+              </div>
+            </article>
+          </div>
         </div>
       </section>
 
