--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
 
               <div>
                 <h3 class="contact__title">Ubicación</h3>
-                <span class="contact__subtitle">México - CDMX </span>
+                <span class="contact__subtitle "">México - CDMX </span>
               </div>
             </div>
           </div>
@@ -718,6 +718,69 @@
       <!-- @@@@@@@@@@@@  /Contact Area @@@@@@@@@@@@@ -->
     </main>
     <!-- @@@@@@@@@@@@  /Main Section @@@@@@@@@@@@@ -->
+
+    <!-- @@@@@@@@@@@@  Footer Section @@@@@@@@@@@@@ -->
+    <footer id="footer">
+      <section class="container mx-auto py-10">
+        <div class="grid md-cols-2 lg-cols-4 font-family">
+          <div class="text-gray text-center md-text-left">
+            <span>
+              222 Calle Hocaba <br>
+            555 CDMX, México.
+            </span>
+            <span class="d-block">(55) 5555-5555</span>
+            <span class="text-red">logoterapia@gmail.com</span>
+          </div>
+          <div class="text-gray text-center md-text-left">
+            <h3 class="text-dark">
+              Acerca de mí
+            </h3>
+            <div class="py-5">
+              <a href="#" class="d-block">
+                <span class="text-gray">Acerca de mí</span>
+              </a>
+              <a href="#" class="d-block">
+                <span class="text-gray">Blog</span>
+              </a>
+              <a href="#" class="d-block">
+                <span class="text-gray">Certificaciones</span>
+              </a>
+              <a href="#" class="d-block">
+                <span class="text-gray">Compromiso social</span>
+              </a>
+            </div>
+          </div>
+          <div class="text-gray text-center md-text-left">
+            <h3 class="text-dark">
+              Servicios
+            </h3>
+            <div class="py-5">
+              <a href="#" class="d-block">
+                <span class="text-gray">Terapia</span>
+              </a>
+              <a href="#" class="d-block">
+                <span class="text-gray">Talleres</span>
+              </a>
+              <a href="#" class="d-block">
+                <span class="text-gray">Diplomados</span>
+              </a>
+              
+            </div>
+          </div>
+          <div class="text-gray text-center md-text-left">
+            <h3 class="text-dark">
+              Newsletter
+            </h3>
+            <p>¡Suscríbete a nuestro Newsletter!</p>
+            <div class="flex py-5 font-family justify-center">
+              <input type="text" class="suscribe-text" placeholder="Ingresa tu email">
+              <button class="btn btn-go">Suscribirse</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
+    <!-- @@@@@@@@@@@@  /Footer Section @@@@@@@@@@@@@ -->
 
     <!--==================== SCROLL TOP ====================-->
     <a href="#" class="scrollup" id="scroll-up">
