--- a/index.html
+++ b/index.html
@@ -772,9 +772,9 @@
               Newsletter
             </h3>
             <p>¡Suscríbete a nuestro Newsletter!</p>
-            <div class="flex py-5 font-family justify-center">
+            <div id="go" class="flex py-5 font-family">
               <input type="text" class="suscribe-text" placeholder="Ingresa tu email">
-              <button class="btn btn-go">Suscribirse</button>
+              <button class="text-gray btn btn-go">Ir</button>
             </div>
           </div>
         </div>
