--- a/index.html
+++ b/index.html
@@ -774,7 +774,9 @@
             <p>¡Suscríbete a nuestro Newsletter!</p>
             <div id="go" class="flex py-5 font-family">
               <input type="text" class="suscribe-text" placeholder="Ingresa tu email">
-              <button class="text-gray btn btn-go">Ir</button>
+              <button class="text-gray btn btn-go">
+                <i class="uil uil-check-circle"></i>
+              </button>
             </div>
           </div>
         </div>
