--- a/index.html
+++ b/index.html
@@ -624,13 +624,13 @@
           <h1 class="text-lg text-dark">Contacto</h1>
         </div>
 
-        <div class="contact__container container__contact grid">
+        <div class="contact__container container__contact grid font-family">
           <div>
             <div class="contact__information">
               <i class="uil uil-phone contact__icon"></i>
 
               <div>
-                <h3 class="contact__title">Llamame</h3>
+                <h3 class="contact__title">Llámame</h3>
                 <span class="contact__subtitle">55 5555 5555</span>
               </div>
             </div>
@@ -656,13 +656,13 @@
             <div class="grid-one text-center md-text-left contact-area"></div>
             <form
               id="form"
-              class="container__contact contact_form grid grid-two"
+              class="container__contact contact_form grid grid-two font-family"
               action="https://formspree.io/f/xgeqwyyg"
               method="POST"
             >
               <div class="contact__inputs grid">
                 <div class="contact__content">
-                  <label for="name" class="contact__label">Name</label>
+                  <label for="name" class="contact__label">Nombre</label>
                   <input
                     id="name"
                     name="name"
@@ -681,7 +681,7 @@
                 </div>
               </div>
               <div class="contact__content">
-                <label for="project" class="contact__label">Project</label>
+                <label for="project" class="contact__label">Asunto</label>
                 <input
                   id="project"
                   name="project"
@@ -690,7 +690,7 @@
                 />
               </div>
               <div class="contact__content">
-                <label for="message" class="contact__label">Message</label>
+                <label for="message" class="contact__label">Mensaje</label>
                 <textarea
                   cols="0"
                   rows="7"
