--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
     <div class="circle-container">
@@ -378,14 +382,14 @@
       <section class="banner-area font-family" id="home">
         <div class="container mx-auto banner-title">
           <div class="title">
-            <span class="d-inline btn btn-primary bg-gradient-peach text-red"
+            <span class="d-inline btn btn-primary bg-gradient-peach text-red "
               >Logoterapia</span
             >
             <div class="py-2 branding text-dark text-lg sm-text-xl font-bold">
-              <span class="d-block">Dra. Rosa López</span>
-              <span class="d-block">Logoterapeuta</span>
+              <span class="d-block animate__animated animate__fadeInDown animate__faster">Dra. Rosa López</span>
+              <span class="d-block animate__animated animate__fadeInDown animate__fast">Logoterapeuta</span>
             </div>
-            <div id="greeting" class="py-5">
+            <div id="greeting" class="py-5 animate__animated animate__fadeInUp">
               <p class="text-gray">
                 Soy Psicóloga Clínica, egresada de la Universidad Iberoamericana
               </p>
@@ -394,7 +398,7 @@
               </p>
             </div>
 
-            <div class="py-5">
+            <div class="py-5 animate__animated animate__shakeX">
               <a href="#contact" class="text-indigo text-md">
                 Solicita una cita
               </a>
@@ -568,7 +572,7 @@
         </div>
 
         <div class="grid cols-1 lg-cols-3 font-family py-10">
-          <div class="card">
+          <div class="card animate__animated animate__fadeInLeft">
             <article class="btn-shadow">
               <img src="./assets/articles/article3.jpeg" class="w-100" alt="" />
               <div class="py-5 px-5">
@@ -582,7 +586,7 @@
               </div>
             </article>
           </div>
-          <div class="card">
+          <div class="card animate__animated animate__fadeInLeft">
             <article class="btn-shadow">
               <img src="./assets/articles/article1.jpeg" class="w-100" alt="" />
               <div class="py-5 px-5">
@@ -596,7 +600,7 @@
               </div>
             </article>
           </div>
-          <div class="card">
+          <div class="card animate__animated animate__fadeInLeft">
             <article class="btn-shadow">
               <img src="./assets/articles/article4.jpeg" class="w-100" alt="" />
               <div class="py-5 px-5">
