web final version

--- a/index.html
+++ b/index.html
@@ -470,9 +470,9 @@
       <section class="container mx-auto social-area" id="social">
         <div class="grid cols-1 lg-cols-2 text-center md-text-left">
           <div class="grid-images">
-            <div class="item-one"></div>
-            <div class="item-two"></div>
-            <div class="item-three"></div>
+            <div data-rellax-speed="2" class="item-one rellax"></div>
+            <div data-rellax-speed="-1" class="item-two rellax"></div>
+            <div data-rellax-speed="1" class="item-three rellax"></div>
           </div>
           <div class="py-10">
             <span class="d-inline btn btn-primary bg-gradient-peach text-red"
@@ -809,7 +809,9 @@
     </script>
 
     <!-- scripts -->
-    <script src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js" integrity="sha512-f5HTYZYTDZelxS7LEQYv8ppMHTZ6JJWglzeQmr0CVTS70vJgaJiIO15ALqI7bhsracojbXkezUIL+35UXwwGrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="main.js"></script>
+    
   </body>
 </html>
